[package]
name = "getip"
version = "0.2.1"
edition = "2024"
description = "Find the public IP address of a device"
documentation = "https://docs.rs/getip"
homepage = "https://github.com/rexagon/getip"
repository = "https://github.com/rexagon/getip"
license = "MIT"
categories = ["network-programming"]
include = ["src/**/*.rs", "README.md", "LICENSE", "Cargo.toml"]
keywords = ["public", "external", "ip", "async"]

[dependencies]
futures-util = "0.3"
hickory-client = "0.25"
thiserror = "2.0"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
